# AACR

./: .gitignore  ros2 cmds.txt  smart_city .drawio  smart_city.drawio  todo.md
smart_university/: package.xml  setup.py
smart_university/launch/: launch.py
smart_university/smart_university/: lidar_controller.py
src/smart_city/: package.xml  setup.cfg  setup.py
src/smart_city/config/: bus_paths.json  bus_stops.json  city_map.json  parkings.json  pedestrian_crossings.json  static_obstacles.json  taxi_request_zones.json  traffic_lights.json  vehicles.json
src/smart_city/launch/: launch.py  launch_1.py  launch_2.py  launch_3.py
src/smart_city/simulation/: world.sdf  world_with_privates.sdf
src/smart_city/smart_city/: __init__.py  bus_booking_generator.py  bus_path_manager.py  dynamic_obstacle_spawner_node.py  gazebo_visual_controller.py  navigation_executor.py  navigation_executor_v2.py  private_car_simulator_node.py  simulation_report_recorder.py  static_obstacle_spawner_node.py  taxi_coordinator.py  taxi_request_generator.py  taxi_request_manager.py  traffic_light_manager.py
src/smart_city_gz_plugins/: CMakeLists.txt  package.xml
src/smart_city_gz_plugins/src/: model_world_pose_publisher.cpp
src/smart_city_interfaces/: CMakeLists.txt  package.xml
src/smart_city_interfaces/action/: NavigateToPose.action
src/smart_university/: setup.cfg  setup.py
src/smart_university/launch/: launch.py
src/smart_university_interfaces/: CMakeLists.txt  package.xml
src/smart_university_interfaces/action/: ChargeRobot.action  CleanShelf.action
(+26 files in other folders)
